Fixing z-index on to-top button

--- a/Stylesheets/style.scss
+++ b/Stylesheets/style.scss
@@ -817,4 +817,5 @@ main {
     padding: 1em;
     opacity: 0;
     cursor: pointer;
+    z-index: 999;
 }
